# Vortex

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  INTEGRITY.sig.json  Makefile  README.md  RESEARCH-BMP.md  alembic.ini  build.sh  capacitor.config.ts  conftest.py  docker-compose.yml  file::memory:-shm  generate_icons.py  install.sh  jest.config.js  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  test_discovery.py  translate_controller_locales.py  translate_locales.py  vortex.db  vortex.db-shm  vortex.db-wal
.github/workflows/: ci.yml  release.yml
Architex/: rate_language.md
Gravitix/: rate_language.md
Gravitix/src/: ast.rs  bot.rs  fmt.rs  interpreter.rs  lexer.rs  lsp.rs  parser.rs  stdlib.rs  value.rs
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_federated_rooms.py  003_phone_nullable_ip_privacy.py  004_seed_phrase_hash.py  005_fingerprint_verification.py
app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py  models_rooms.py  results.json
app/ai/: provider.py
app/authentication/: __init__.py  _helpers.py  auth.py  key_login.py  passkey.py  password.py  profile.py  qr_login.py  security_questions.py  session.py  two_factor.py
app/benchmarks/: run_benchmarks.py
app/bots/: antispam_bot.py  bot_advanced.py  bot_api.py  bot_crud.py  bot_marketplace.py  bot_messaging.py  bot_shared.py  ide_bot_api.py  ide_monitoring.py  ide_projects.py  ide_routes.py  ide_runner.py  ide_shared.py  ide_versioning.py
app/chats/: ai_assistant.py  bridge.py  calls.py  channel_feeds.py  channels.py  chat.py  contact_sync.py  contacts.py  dm.py  group_calls.py  groups.py  link_preview.py  reports.py  rooms.py  saved.py  saved_gifs.py  search.py  sfu.py  spaces.py  spaces_advanced.py  statuses.py  stickers.py  stories.py  stream.py  tasks.py  translate.py  voice.py
app/docs/: openapi_config.py
app/federation/: federation.py  trusted_nodes.py
app/files/: files_advanced.py  resumable.py
app/keys/: keys.py  prekeys.py
app/media/: sfu_bridge.py
app/models/: __init__.py  bot.py  contact.py  media.py  moderation.py  prekeys.py  user.py
app/models_rooms/: __init__.py  admin.py  analytics.py  collections.py  discussions.py  encryption.py  enums.py  federation.py  feeds.py  messages.py  permissions.py  rooms.py  spaces.py  stickers.py
app/peer/: _router.py  connection_manager.py  controller_client.py  controller_proxy.py  edge_cache.py  integrity_cross.py  peer_discovery.py  peer_federation.py  peer_models.py  peer_p2p.py  peer_registry.py  peer_routes.py  redis_pubsub.py  sns_resolver.py  solana_registry.py
app/push/: bmp_push_proxy.py  web_push.py
app/routes/: __init__.py  web.py  websocket.py
bots_workspace/: e2e_comp_proj_0256aadd_roles.json  e2e_comp_proj_274c693d.grav  e2e_proj_00kytwmk_versions.json  e2e_proj_02977fd0_versions.json  e2e_proj_02a208dc_versions.json  e2e_proj_05cee755_versions.json  e2e_proj_06m4pcjs_versions.json  e2e_proj_08842eae_versions.json  e2e_proj_0abaca83_versions.json  e2e_proj_0bvg4jg8_versions.json  e2e_proj_0k8nd13i_versions.json  e2e_proj_106ee663_versions.json  e2e_proj_11664d97_versions.json  e2e_proj_12iyovjh_versions.json  e2e_proj_1307e102_versions.json  e2e_proj_13st7w0i_versions.json  e2e_proj_15f456b1_versions.json  e2e_proj_1b40a078_versions.json  e2e_proj_1bz8q7az_versions.json  e2e_proj_1dff646c_versions.json  e2e_proj_1ec886db_versions.json  e2e_proj_1g3rpvye_versions.json  e2e_proj_1o3oyifb_versions.json  e2e_proj_242f01e5_versions.json  e2e_proj_273af185_versions.json  e2e_proj_29257ab0_versions.json  e2e_proj_2aba3313_versions.json  e2e_proj_2hb72otz_versions.json  e2e_proj_2u1v00ai_versions.json  e2e_proj_36cacd4e_versions.json  e2e_proj_37jr6omz_versions.json  e2e_proj_37l6euri_versions.json  e2e_proj_3b26ae30_versions.json  e2e_proj_3d94tibg_versions.json  e2e_proj_3dl5ecdu_versions.json  e2e_proj_3m10b114_versions.json  e2e_proj_3x9gnwve_versions.json  e2e_proj_40a68a30_versions.json  e2e_proj_414cf4a8_versions.json  e2e_proj_42452ad7_versions.json  (+151 more)
certs/: vortex-ca.crt  vortex.crt  vortex.key
deploy/: nginx.conf  prometheus.yml  vortex.service
docs/: API_REFERENCE.md  BOT_DEVELOPMENT.md  QUICKSTART.md
e2e/: fixtures.js  package.json  playwright.config.js
example-page/: index.html  script.js  style.css
node_setup/: _app.py  models.py  ssl_generate.py  ssl_install.py  ssl_manager.py  ssl_result.py  ssl_utils.py  wizard.py  wizard_env.py  wizard_routes.py
playwright-tests/: fixtures.js
rust_utils/: Cargo.toml
rust_utils/src/: lib.rs  messages.rs  udp_broadcast.rs
rust_utils/src/auth/: passwords.rs  tokens.rs
rust_utils/src/bmp/: constants.rs  gc.rs  mailbox_id.rs  mod.rs  pybridge.rs  rate_limit.rs  room_secrets.rs  store.rs  types.rs
rust_utils/src/crypto/: handshake.rs
rust_utils/src/messages/: crypt.rs  hash.rs
rust_utils/src/udp_broadcast/: discovery.rs
rust_utils/tests/: messages_tests.rs
solana_program/: Anchor.toml  package.json
solana_program/programs/vortex_registry/: Cargo.toml
solana_program/programs/vortex_registry/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
static/: index.html  manifest.json
static/css/: ide.css  (+39 more)
templates/: base.html  index.html
uploads/: 9e01044be28e476da2f9085b0475b894_2
vortex/: Cargo.toml
vortex-server/: main.py  requirements.txt
vortex-test/: README.md  serve.py
vortex_chat/: Cargo.toml
vortex_chat/src/: auth.rs  lib.rs  messages.rs  udp_broadcast.rs
vortex_chat/src/auth/: passwords.rs  tokens.rs
vortex_chat/src/crypto/: handshake.rs
vortex_chat/src/messages/: crypt.rs  hash.rs
vortex_chat/src/udp_broadcast/: discovery.rs
vortex_chat/tests/: messages_tests.rs
vortex_controller/: README.md  __init__.py  controller_crypto.py  integrity_gate.py  ipfs_publish.py  main.py  mirror_health.py  models.py  requirements.txt  storage.py
vortex_wizard/: __init__.py  __main__.py  app.py  requirements.txt  server.py  vortex-wizard.spec
Презентация/: VORTEX.pptx
(+620 files in other folders)
