[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-chat"
version = "5.0.0"
description = "100% decentralized P2P messenger with E2E encryption"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Vortex Team"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "SQLAlchemy>=2.0.20",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "argon2-cffi>=23.1.0",
    "blake3>=0.4.0",
    "curl_cffi>=0.7.0",
    "pywebpush>=2.0.0",
    "pyotp>=2.9.0",
    "alembic>=1.13.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "redis[hiredis]>=5.0.0",
    "bleak>=0.21.0",
    "dbus-next>=0.2.3",
]

[project.optional-dependencies]
transport-windows = [
    "winrt-Windows.Devices.WiFiDirect>=2.1.0",
    "winrt-Windows.Devices.Enumeration>=2.1.0",
]
post-quantum = [
    "liboqs-python>=0.10.0",
    "pqcrypto>=0.1.3",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
    "mypy>=1.8.0",
]
prod = [
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

[project.scripts]
vortex = "run:main"

# ── Ruff (linter + formatter) ────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # bugbear
    "S",     # bandit (security)
    "T20",   # print statements
    "SIM",   # simplify
    "TCH",   # type-checking imports
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert (needed in tests)
    "S104",   # bind to 0.0.0.0
    "S603",   # subprocess call
    "S607",   # partial path subprocess
    "B008",   # function call in default arg (FastAPI Depends)
    "T201",   # print (used in CLI run.py)
    "RUF012", # mutable class default
    "N805",   # first argument naming
    "UP007",  # Optional → X | None (keep for readability)
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101", "S106", "S311"]
"conftest.py" = ["S101", "S106", "S311"]
"run.py" = ["T201", "T203"]
"app/benchmarks/*" = ["T201", "S311"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["tests.py", "test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--no-header",
    "-ra",
    "--color=yes",
    "--durations=10",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=88",
    "--timeout=30",
]
markers = [
    "slow: tests that take > 1 sec",
    "crypto: crypto core tests (AES, ECIES, SHA-256)",
    "auth: authentication tests",
    "rooms: room tests",
    "files: file upload tests",
    "websocket: WebSocket tests",
    "security: security tests (WAF, SQLi, XSS, CSRF)",
    "metrics: performance benchmarks",
    "integration: end-to-end integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/benchmarks/*",
    "app/__init__.py",
    "app/transport/*",
    "app/routes/*",
    "app/services/*",
    "app/chats/chat.py",
    "app/chats/voice.py",
    "app/files/resumable.py",
    "app/bots/bot_api.py",
    "app/peer/peer_registry.py",
    "app/federation/federation.py",
    "app/main.py",
    "app/config.py",
    "app/database.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "import vortex_chat",
    "_vc\\.",
    "if _RUST:",
    "_RUST",
    "except WebSocketDisconnect",
    "async def websocket",
    "logger\\.(info|warning|error|debug|exception)",
    "except (ImportError|ModuleNotFoundError)",
    "except Exception",
    "db\\.rollback",
    "if _IS_TESTING",
    "if not request\\.client",
]
show_missing = true

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# ── Bandit ────────────────────────────────────────────────────────────────────

[tool.bandit]
exclude_dirs = ["app/tests", "app/benchmarks"]
skips = ["B101", "B104"]
