[package]
name = "vortex_chat"
version = "0.1.2"
edition = "2024"

[lib]
name = "vortex_chat"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"] }
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.10.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
whoami = "0.5"
argon2 = "0.5"
sha2 = "0.11.0-rc.5"
subtle = "2.6.1"
hex = "0.4.3"


[dev-dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "auto-initialize"] }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1