[package]
name = "vortex_registry"
version = "0.1.0"
description = "On-chain peer registry for the Vortex P2P network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vortex_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# init-if-needed enables #[account(init_if_needed)]; documented re-init
# protection lives in the register / register_with_fee instructions
# themselves (owner is compared to the signer every time).
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
